security workarounds